--- a/Messenger/Views/Admin/Admin.cshtml
+++ b/Messenger/Views/Admin/Admin.cshtml
@@ -40,30 +40,30 @@
                         </div>
                         @foreach (var user in Model)
                         {
-                       
-                        <div class="users-list-elem">
-                            <div class="container">
-                                <div class="row centered-vertical">
-                                    <div class="col-2">
-                                        <button type="button" class="btn btn-default button button-delete" id="button-delete" onclick="DeleteUser(@user.Id)">Удалить</button>
-                                    </div>
-                                    <div class="col-3">
-                                        <div class="inline-block-el" onclick="form_contacts(@user.Id)">
-                                            <p class="username-in-panel">@user.UserName</p>
+
+                            <div class="users-list-elem">
+                                <div class="container">
+                                    <div class="row centered-vertical">
+                                        <div class="col-2">
+                                            <button type="button" class="btn btn-default button button-delete" id="button-delete" onclick="DeleteUser(@user.Id)">Удалить</button>
                                         </div>
-                                    </div>
+                                        <div class="col-3">
+                                            <div class="inline-block-el" onclick="form_contacts(@user.Id)">
+                                                <p class="username-in-panel">@user.UserName</p>
+                                            </div>
+                                        </div>
                                         <div class="col-3">
                                             <input type="text" class="inline-block-el form-control pass-input" size="10" id="pass_@user.Id" value="@user.Password">
                                         </div>
-                                            <div class="col-2">
-                                                <button type="button" class="btn btn-default button button-save" id="button-save" onclick="ChangePassword(@user.Id)">Сохранить</button>
-                                             </div>
-                                                <div class="col-2">
-                                                    <button type="button" class="btn btn-default button button-discard" id="button-discard" onclick="ReloadPage()">Отменить</button>
-                                                </div>
-                                                </div>
-                                            </div>
-                        </div>
+                                        <div class="col-2">
+                                            <button type="button" class="btn btn-default button button-save" id="button-save" onclick="ChangePassword(@user.Id)">Сохранить</button>
+                                        </div>
+                                        <div class="col-2">
+                                            <button type="button" class="btn btn-default button button-discard" id="button-discard" onclick="ReloadPage()">Отменить</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         }
 
                     </div>
@@ -95,7 +95,37 @@
                         </form>
                     </div>
                     <div class="user-contacts" id="user-contacts">
-                        
+
+                    </div>
+                </div>
+              
+                    
+             
+            </div>
+            <div class="row">            
+                <div class="col-6">
+                    <div class="chat-list-to-download">
+                        <div class="chat-list-to-download-top">
+                            <p>Список чатов</p>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-6 chat-to-download-col">
+                                            <div class="chat-to-download">
+                                                Chatter 1 
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="chat-to-download chat-to-download-col">
+                                                Chatter 2
+                                            </div>
+                                            </div>
+                                        </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
