--- a/Messenger/Content/Site.css
+++ b/Messenger/Content/Site.css
@@ -94,7 +94,8 @@
 
 .name-in-panel {
     position: relative;
-    top: -5px;
+    top: 5px;
+    left: 10px;
     max-width: 60%;
     word-wrap: break-word;
     font-weight: 600;
