--- a/Messenger/Views/Home/Index.cshtml
+++ b/Messenger/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                         @foreach (var chat in Model)
                         {
                         <div class="block-chatter" id="@chat.ChatId" onclick="ClickOnChat(@chat.ChatId, @chat.Receiver, '@chat.PartnerFullName')">
-                           <div class="img-circle-chatter" style="background-color: @chat.Color;">
+                           <div class="img-circle-chatter" style="background-color: #@chat.Color;">
 
                            </div>
                             <span class="name-in-panel"><p class="clip">@chat.PartnerFullName</p></span>
