Notification in tab title

--- a/Messenger/Views/Home/Index.cshtml
+++ b/Messenger/Views/Home/Index.cshtml
@@ -109,9 +109,12 @@
     <script type="text/javascript">
         window.onload = function () {
             window.myId = @ViewBag.MyId;
+            tabLableStart();
         };
 
         window.sound = true;
+
+        
     </script>
 
 </body>
